--- a/christmas-task/src/components/view/toys/toys.scss
+++ b/christmas-task/src/components/view/toys/toys.scss
@@ -2,6 +2,261 @@
 
 .toysPage {
   position: relative;
-  background: linear-gradient(rgba($accent-color, 0.1), rgba($accent-color, 0.1)),
+  background: linear-gradient(rgba(mix($accent-color, #000, 0.1), 0.5), rgba(mix($accent-color, #000, 0.1), 0.5)),
     center / cover no-repeat url('../../../assets/bg.webp');
+  background-attachment: fixed;
+}
+.toys-cards {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-gap: 16px;
+  padding-bottom: 100px;
+}
+
+.card {
+  @include glass-plastin;
+  position: relative;
+  min-width: 300px;
+  max-width: 370px;
+  padding: 20px 20px 20px 0;
+  cursor: pointer;
+
+  &__title {
+    margin-bottom: 18px;
+    font-family: 'Neucha';
+    font-size: $fz2;
+    text-align: center;
+  }
+  &__inner {
+    @include flex-space-between;
+  }
+  &__img {
+    align-self: flex-start;
+    width: 90px;
+    margin: 0 auto;
+  }
+  &__info {
+    margin-bottom: 5px;
+    font-size: $fz4;
+    list-style-type: none;
+  }
+
+  &.selected .ribbon {
+    background: #cbb77a;
+    &:after {
+      border-left: 15px solid #cbb77a;
+    }
+  }
+}
+
+.ribbon {
+  width: 100px;
+  height: 40px;
+  line-height: 50px;
+  padding-left: 15px;
+  position: absolute;
+  left: -13px;
+  bottom: 30px;
+  background: $accent-color;
+
+  &:before,
+  &:after {
+    content: '';
+    position: absolute;
+  }
+  &:before {
+    height: 0;
+    width: 0;
+    top: -8.5px;
+    left: 0.1px;
+    border-bottom: 9px solid mix($main-color, $accent-color, 90%);
+    border-left: 9px solid transparent;
+  }
+  &:after {
+    height: 0;
+    width: 0;
+    right: -14.5px;
+    border-top: 20px solid transparent;
+    border-bottom: 20px solid transparent;
+    border-left: 15px solid $accent-color;
+  }
+}
+
+.filters {
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
+  margin: 20px 0 50px;
+}
+
+.filter {
+  @include flex-column;
+  flex-grow: 1;
+  padding: 20px 10px;
+  font-size: $fz4;
+  @include glass-plastin;
+  border: 0;
+
+  &__title {
+    margin-bottom: 10px;
+    font-size: $fz3;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    font-family: 'Neucha', italic;
+  }
+  &__inner {
+    width: 80%;
+    min-width: 250px;
+    list-style: none;
+  }
+  &__field {
+    display: flex;
+    align-items: center;
+    margin: 15px 0;
+  }
+
+  &__label {
+    display: block;
+    padding: 15px 0 10px;
+  }
+}
+
+.shape__value-btn,
+.color__value-btn,
+.size__value-btn,
+.favorite__value-btn {
+  width: 25px;
+  height: 25px;
+  margin: 0 3px;
+  background-color: transparent;
+  border: 0;
+}
+
+.shape__value-btn {
+  &:nth-child(1) {
+    @include cover-background-image('../../../assets/svg/ball.svg');
+  }
+  &:nth-child(2) {
+    @include cover-background-image('../../../assets/svg/bell.svg');
+  }
+  &:nth-child(3) {
+    @include cover-background-image('../../../assets/svg/cone.svg');
+  }
+  &:nth-child(4) {
+    @include cover-background-image('../../../assets/svg/snowflake.svg');
+  }
+  &:nth-child(5) {
+    @include cover-background-image('../../../assets/svg/toy.svg');
+  }
+
+  &.active {
+    filter: brightness(0.7);
+  }
+}
+
+.color__value-btn {
+  position: relative;
+  border-radius: 3px;
+  margin: 0 5px;
+
+  &:nth-child(1) {
+    background-color: #fff;
+  }
+  &:nth-child(2) {
+    background-color: #fdd700;
+  }
+  &:nth-child(3) {
+    background-color: #fd0000;
+  }
+  &:nth-child(4) {
+    background-color: #2199eb;
+  }
+  &:nth-child(5) {
+    background-color: #08aa05;
+  }
+  &.active::after {
+    content: '✔';
+    color: #000;
+    font-size: 18px;
+  }
+}
+
+.size__value-btn {
+  @include cover-background-image('../../../assets/svg/ball.svg');
+
+  &:nth-child(1) {
+    background-size: 70%;
+  }
+  &:nth-child(2) {
+    background-size: 90%;
+  }
+  &.active {
+    filter: brightness(0.7);
+  }
+}
+
+.favorite__value-btn {
+  margin-left: 10px;
+}
+
+.range {
+  @include flex-space-between;
+
+  &__value {
+    @include glass-plastin;
+    width: 55px;
+    padding: 5px;
+    margin: 0 20px;
+    font-size: 15px;
+    text-align: center;
+    cursor: auto;
+
+    &:focus {
+      outline: none;
+    }
+
+    &::-webkit-inner-spin-button {
+      -webkit-appearance: none;
+    }
+  }
+
+  .double-slider {
+    height: 6px;
+    width: 40%;
+    border: 0;
+  }
+
+  .noUi-horizontal .noUi-handle {
+    width: 15px;
+    height: 15px;
+    right: -10px;
+    top: -5px;
+    border-radius: 50%;
+
+    &::before,
+    &::after {
+      content: none;
+    }
+  }
+}
+
+.filter__sort {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+}
+.filter__sort-types {
+  padding: 10px;
+  @include glass-plastin;
+}
+
+.filter__sort-type {
+  padding: 100px;
+  color: #000;
+}
+
+.filter__reset {
+  @include glass-plastin;
+  padding: 8px 10px;
 }
