--- a/christmas-task/src/scss/constant.scss
+++ b/christmas-task/src/scss/constant.scss
@@ -9,7 +9,7 @@ $fz3: 20px;
 $fz4: 18px;
 $fz5: 12px;
 
-@media (max-width: 1440px) {
+@media (min-width: 0) {
   $fz1: 48px;
   $fz2: 20px;
   $fz3: 18px;
