--- a/christmas-task/src/scss/animation.scss
+++ b/christmas-task/src/scss/animation.scss
@@ -28,3 +28,20 @@
     opacity: 0;
   }
 }
+
+.hide {
+  display: none;
+  // opacity: 1;
+  // animation: hideCard 1s ease forwards;
+}
+
+// @keyframes hideCard {
+//   to {
+//     opacity: 0;
+//     min-height: 0;
+//     min-width: 0;
+//     padding: 0;
+//     margin: 0;
+//     border: 0;
+//   }
+// }
