fix: fix value filters and filters local storage

--- a/christmas-task/src/components/view/toys/toys.html
+++ b/christmas-task/src/components/view/toys/toys.html
@@ -23,7 +23,7 @@
           <button class="size__value-btn" type="button" data-btn="size" data-value="большой"></button>
         </li>
         <li class="filter__field favorite">Только любимые:
-          <input class="favorite__value-btn" type="checkbox" data-btn="favorite">
+          <input class="favorite__value-btn" type="checkbox" data-btn="favorite" data-value="нет">
         </li>
       </ul>
     </div>
@@ -60,6 +60,8 @@
       </div>
     </div>
   </form>
-  <div class="toys-cards"></div>
+  <div class="toys-cards">
+    <div class="toys__message">Извините, по вашему запросу ничего не найдено</div>
+  </div>
 
 </div>
