--- a/christmas-task/src/components/view/toys/toys.scss
+++ b/christmas-task/src/components/view/toys/toys.scss
@@ -12,6 +12,11 @@
   grid-gap: 16px;
   padding-bottom: 100px;
 }
+.toys__message{
+  font-size: 25px;
+  text-align: center;
+  display: none;
+}
 
 .card {
   @include glass-plastin;
