feat: add range filters

--- a/christmas-task/src/components/view/toys/toys.html
+++ b/christmas-task/src/components/view/toys/toys.html
@@ -34,7 +34,7 @@
 
         <div class="filter__range range">
           <input class="range__value" type="number" readonly>
-          <div id="slider-count" class="double-slider"></div>
+          <div id="slider-count" class="double-slider" data-range="count"></div>
           <input class="range__value" type="number" readonly>
         </div>
 
@@ -42,7 +42,7 @@
 
         <div class="filter__range range">
           <input class="range__value" type="number" readonly>
-          <div id="slider-year" class="double-slider"></div>
+          <div id="slider-year" class="double-slider"  data-range="year"></div>
           <input class="range__value" type="number" readonly>
         </div>
       </div>
