--- a/christmas-task/src/components/view/toys/toys.html
+++ b/christmas-task/src/components/view/toys/toys.html
@@ -53,8 +53,8 @@
         <select class="filter__sort-types">
           <option class="filter__sort-type" data-option="name" data-order="increment" selected>По названию от "А" до "Я"</option>
           <option class="filter__sort-type" data-option="name" data-order="decrement">По названию от "Я" до "А"</option>
-          <option class="filter__sort-type" data-option="count" data-order="increment">По количеству: по возрастанию</option>
-          <option class="filter__sort-type" data-option="count" data-order="decrement">По количеству: по убыванию</option>
+          <option class="filter__sort-type" data-option="year" data-order="increment">По году приобритения: по возрастанию</option>
+          <option class="filter__sort-type" data-option="year" data-order="decrement">По году приобритения: по убыванию</option>
         </select>
         <button class="filter__reset" type="button">Сброс фильтров</button>
       </div>
