--- a/christmas-task/src/components/view/toys/toys.scss
+++ b/christmas-task/src/components/view/toys/toys.scss
@@ -12,7 +12,7 @@
   grid-gap: 16px;
   padding-bottom: 100px;
 }
-.toys__message{
+.toys__message {
   font-size: 25px;
   text-align: center;
   display: none;
@@ -90,6 +90,7 @@
 .filters {
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
   gap: 20px;
   margin: 20px 0 50px;
 }
@@ -254,6 +255,7 @@
 .filter__sort-types {
   padding: 10px;
   @include glass-plastin;
+  margin-bottom: 30px;
 }
 
 .filter__sort-type {
