--- a/christmas-task/src/components/view/tree/tree.html
+++ b/christmas-task/src/components/view/tree/tree.html
@@ -1,1 +1,116 @@
-<p>Tree</p>
+<div class="tree">
+  <aside class="tree__aside left">
+    <div class="menu">
+      <button class="snow-btn"></button>
+      <button class="audio-btn"></button>
+    </div>
+    <p class="tree__title">Выберите ёлку</p>
+    <div class="tree-type">
+      <div class="tree-type__item"></div>
+      <div class="tree-type__item"></div>
+      <div class="tree-type__item"></div>
+      <div class="tree-type__item"></div>
+    </div>
+    <p class="tree__title">Выберите фон</p>
+    <div class="tree-background">
+      <div class="tree-background__item"></div>
+      <div class="tree-background__item"></div>
+      <div class="tree-background__item"></div>
+      <div class="tree-background__item"></div>
+      <div class="tree-background__item"></div>
+      <div class="tree-background__item"></div>
+      <div class="tree-background__item"></div>
+      <div class="tree-background__item"></div>
+    </div>
+
+    <p class="tree__title">Гирлянда</p>
+    <div class="lights">
+      <div class="lights__item"></div>
+      <div class="lights__item"></div>
+      <div class="lights__item"></div>
+      <div class="lights__item"></div>
+      <div class="lights__item"></div>
+
+    </div>
+    <button class="tree__save">Сохранить</button>
+    <button class="tree__reset">Сбросить</button>
+  </aside>
+
+  <div class="tree-wrapper tree__main">
+    <div class="christmas-tree"></div>
+  </div>
+
+  <aside class="right tree__aside">
+    <p class="tree__title">Игрушки</p>
+    <div class="toys-card">
+      <div class="toys-card__item">
+        <span class='toys-card__indicator'>1</span>
+      </div>
+      <div class="toys-card__item">
+        <span class='toys-card__indicator'>1</span>
+      </div>
+      <div class="toys-card__item">
+        <span class='toys-card__indicator'>1</span>
+      </div>
+      <div class="toys-card__item">
+        <span class='toys-card__indicator'>1</span>
+      </div>
+      <div class="toys-card__item">
+        <span class='toys-card__indicator'>1</span>
+      </div>
+      <div class="toys-card__item">
+        <span class='toys-card__indicator'>1</span>
+      </div>
+      <div class="toys-card__item">
+        <span class='toys-card__indicator'>1</span>
+      </div>
+      <div class="toys-card__item">
+        <span class='toys-card__indicator'>1</span>
+      </div>
+      <div class="toys-card__item">
+        <span class='toys-card__indicator'>1</span>
+      </div>
+      <div class="toys-card__item">
+        <span class='toys-card__indicator'>1</span>
+      </div>
+      <div class="toys-card__item">
+        <span class='toys-card__indicator'>1</span>
+      </div>
+      <div class="toys-card__item">
+        <span class='toys-card__indicator'>1</span>
+      </div>
+      <div class="toys-card__item">
+        <span class='toys-card__indicator'>1</span>
+      </div>
+      <div class="toys-card__item">
+        <span class='toys-card__indicator'>1</span>
+      </div>
+      <div class="toys-card__item">
+        <span class='toys-card__indicator'>1</span>
+      </div>
+      <div class="toys-card__item">
+        <span class='toys-card__indicator'>1</span>
+      </div>
+      <div class="toys-card__item">
+        <span class='toys-card__indicator'>1</span>
+      </div>
+      <div class="toys-card__item">
+        <span class='toys-card__indicator'>1</span>
+      </div>
+      <div class="toys-card__item">
+        <span class='toys-card__indicator'>1</span>
+      </div>
+      <div class="toys-card__item">
+        <span class='toys-card__indicator'>1</span>
+      </div>
+
+    </div>
+    <p class="tree__title">Вы нарядили</p>
+    <div class="saved-trees">
+      <div class="saved-trees__item"></div>
+      <div class="saved-trees__item"></div>
+      <div class="saved-trees__item"></div>
+      <div class="saved-trees__item"></div>
+    </div>
+  </aside>
+</div>
