--- a/christmas-task/src/components/view/header/header.scss
+++ b/christmas-task/src/components/view/header/header.scss
@@ -11,11 +11,12 @@
     @extend .container;
     padding: 10px 0;
   }
-  &.toys .nav__btn_toys,
-  &.tree .nav__btn_tree {
+  &.toys-header .nav__btn_toys,
+  &.tree-header .nav__btn_tree {
     border-bottom: 3px $accent-color solid;
   }
-  &.main {
+  &.main-header,
+  &.tree-header {
     .info-bar {
       display: none;
     }
@@ -46,7 +47,7 @@
   max-width: 500px;
 }
 .search {
-  @include glass-plastin;
+  @include glass-plate;
   width: 80%;
   height: 25px;
   padding: 5px 15px;
