--- a/christmas-task/src/components/view/toys/toys.scss
+++ b/christmas-task/src/components/view/toys/toys.scss
@@ -19,7 +19,7 @@
 }
 
 .card {
-  @include glass-plastin;
+  @include glass-plate;
   position: relative;
   min-width: 300px;
   max-width: 370px;
@@ -100,7 +100,7 @@
   flex-grow: 1;
   padding: 20px 10px;
   font-size: $fz4;
-  @include glass-plastin;
+  @include glass-plate;
   border: 0;
 
   &__title {
@@ -138,21 +138,14 @@
   border: 0;
 }
 
+$toys: 'ball', 'bell', 'cone', 'snowflake', 'toy';
+
 .shape__value-btn {
-  &:nth-child(1) {
-    @include cover-background-image('../../../assets/svg/ball.svg');
-  }
-  &:nth-child(2) {
-    @include cover-background-image('../../../assets/svg/bell.svg');
-  }
-  &:nth-child(3) {
-    @include cover-background-image('../../../assets/svg/cone.svg');
-  }
-  &:nth-child(4) {
-    @include cover-background-image('../../../assets/svg/snowflake.svg');
-  }
-  &:nth-child(5) {
-    @include cover-background-image('../../../assets/svg/toy.svg');
+  @for $i from 1 through length($toys) {
+    $toy: nth($toys, $i);
+    &:nth-child(#{$i}) {
+      @include cover-background-image('../../../assets/svg/#{$toy}.svg');
+    }
   }
 
   &.active {
@@ -165,21 +158,14 @@
   border-radius: 3px;
   margin: 0 5px;
 
-  &:nth-child(1) {
-    background-color: #fff;
+  @for $i from 1 through length($rainbow-colors) {
+    $color: nth($rainbow-colors, $i);
+
+    &:nth-child(#{$i}) {
+      background-color: #{$color};
+    }
   }
-  &:nth-child(2) {
-    background-color: #fdd700;
-  }
-  &:nth-child(3) {
-    background-color: #fd0000;
-  }
-  &:nth-child(4) {
-    background-color: #2199eb;
-  }
-  &:nth-child(5) {
-    background-color: #08aa05;
-  }
+
   &.active::after {
     content: '✔';
     color: #000;
@@ -187,15 +173,19 @@
   }
 }
 
+$toys-size: 70%, 90%, 100%;
+
 .size__value-btn {
   @include cover-background-image('../../../assets/svg/ball.svg');
 
-  &:nth-child(1) {
-    background-size: 70%;
+  @for $i from 1 through length($toys-size) {
+    $size: nth($toys-size, $i);
+
+    &:nth-child(#{$i}) {
+      background-size: #{$size};
+    }
   }
-  &:nth-child(2) {
-    background-size: 90%;
-  }
+
   &.active {
     filter: brightness(0.7);
   }
@@ -209,7 +199,7 @@
   @include flex-space-between;
 
   &__value {
-    @include glass-plastin;
+    @include glass-plate;
     width: 55px;
     padding: 5px;
     margin: 0 20px;
@@ -254,7 +244,7 @@
 }
 .filter__sort-types {
   padding: 10px;
-  @include glass-plastin;
+  @include glass-plate;
   margin-bottom: 30px;
 }
 
@@ -264,6 +254,6 @@
 }
 
 .filter__reset {
-  @include glass-plastin;
+  @include glass-plate;
   padding: 8px 10px;
 }
