feat: add drag & drop and saving tree state

--- a/christmas-task/src/components/view/tree/tree.html
+++ b/christmas-task/src/components/view/tree/tree.html
@@ -6,21 +6,9 @@
     </div>
     <p class="tree__title">Выберите ёлку</p>
     <div class="tree-type">
-      <div class="tree-type__item"></div>
-      <div class="tree-type__item"></div>
-      <div class="tree-type__item"></div>
-      <div class="tree-type__item"></div>
     </div>
     <p class="tree__title">Выберите фон</p>
     <div class="tree-background">
-      <div class="tree-background__item"></div>
-      <div class="tree-background__item"></div>
-      <div class="tree-background__item"></div>
-      <div class="tree-background__item"></div>
-      <div class="tree-background__item"></div>
-      <div class="tree-background__item"></div>
-      <div class="tree-background__item"></div>
-      <div class="tree-background__item"></div>
     </div>
 
     <p class="tree__title">Гирлянда</p>
@@ -37,80 +25,17 @@
   </aside>
 
   <div class="tree-wrapper tree__main">
-    <div class="christmas-tree"></div>
+    <img class="christmas-tree" usemap="#image-map">
+    <map class="drag-area" name="image-map">
+      <area target="" alt="" title="" href="" coords="244,12,42,647,438,641" shape="poly">
+    </map>
   </div>
 
   <aside class="right tree__aside">
     <p class="tree__title">Игрушки</p>
-    <div class="toys-card">
-      <div class="toys-card__item">
-        <span class='toys-card__indicator'>1</span>
-      </div>
-      <div class="toys-card__item">
-        <span class='toys-card__indicator'>1</span>
-      </div>
-      <div class="toys-card__item">
-        <span class='toys-card__indicator'>1</span>
-      </div>
-      <div class="toys-card__item">
-        <span class='toys-card__indicator'>1</span>
-      </div>
-      <div class="toys-card__item">
-        <span class='toys-card__indicator'>1</span>
-      </div>
-      <div class="toys-card__item">
-        <span class='toys-card__indicator'>1</span>
-      </div>
-      <div class="toys-card__item">
-        <span class='toys-card__indicator'>1</span>
-      </div>
-      <div class="toys-card__item">
-        <span class='toys-card__indicator'>1</span>
-      </div>
-      <div class="toys-card__item">
-        <span class='toys-card__indicator'>1</span>
-      </div>
-      <div class="toys-card__item">
-        <span class='toys-card__indicator'>1</span>
-      </div>
-      <div class="toys-card__item">
-        <span class='toys-card__indicator'>1</span>
-      </div>
-      <div class="toys-card__item">
-        <span class='toys-card__indicator'>1</span>
-      </div>
-      <div class="toys-card__item">
-        <span class='toys-card__indicator'>1</span>
-      </div>
-      <div class="toys-card__item">
-        <span class='toys-card__indicator'>1</span>
-      </div>
-      <div class="toys-card__item">
-        <span class='toys-card__indicator'>1</span>
-      </div>
-      <div class="toys-card__item">
-        <span class='toys-card__indicator'>1</span>
-      </div>
-      <div class="toys-card__item">
-        <span class='toys-card__indicator'>1</span>
-      </div>
-      <div class="toys-card__item">
-        <span class='toys-card__indicator'>1</span>
-      </div>
-      <div class="toys-card__item">
-        <span class='toys-card__indicator'>1</span>
-      </div>
-      <div class="toys-card__item">
-        <span class='toys-card__indicator'>1</span>
-      </div>
-
-    </div>
+    <div class="toys-wrapper"></div>
     <p class="tree__title">Вы нарядили</p>
     <div class="saved-trees">
-      <div class="saved-trees__item"></div>
-      <div class="saved-trees__item"></div>
-      <div class="saved-trees__item"></div>
-      <div class="saved-trees__item"></div>
     </div>
   </aside>
 </div>
