--- a/christmas-task/src/scss/animation.scss
+++ b/christmas-task/src/scss/animation.scss
@@ -46,3 +46,21 @@
 //     border: 0;
 //   }
 // }
+
+.snowflake {
+  position: absolute;
+  content: '';
+  top: -20px;
+  width: 20px;
+  height: 20px;
+  z-index: 1;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  animation: fall linear forwards;
+}
+@keyframes fall {
+  to {
+    transform: translateY(102vh);
+  }
+}
