feat: add garlands

--- a/christmas-task/src/components/view/tree/tree.html
+++ b/christmas-task/src/components/view/tree/tree.html
@@ -13,11 +13,11 @@
 
     <p class="tree__title">Гирлянда</p>
     <div class="lights">
-      <div class="lights__item"></div>
-      <div class="lights__item"></div>
-      <div class="lights__item"></div>
-      <div class="lights__item"></div>
-      <div class="lights__item"></div>
+      <div class="lights__item" data-control=1></div>
+      <div class="lights__item" data-control=2></div>
+      <div class="lights__item" data-control=3></div>
+      <div class="lights__item" data-control=4></div>
+      <div class="lights__item" data-control=5></div>
 
     </div>
     <button class="tree__save">Сохранить</button>
@@ -25,6 +25,7 @@
   </aside>
 
   <div class="tree-wrapper tree__main">
+    <div class="garlands"></div>
     <img class="christmas-tree" usemap="#image-map">
     <map class="drag-area" name="image-map">
       <area target="" alt="" title="" href="" coords="244,12,42,647,438,641" shape="poly">
