--- a/christmas-task/src/scss/global.scss
+++ b/christmas-task/src/scss/global.scss
@@ -1,6 +1,7 @@
 @import './constant.scss';
 @import './normalise.sass';
 @import url('https://fonts.googleapis.com/css2?family=Neucha&display=swap');
+@import './garlands.scss';
 
 @font-face {
   font-family: 'Steppe';
