--- a/christmas-task/src/scss/garlands.scss
+++ b/christmas-task/src/scss/garlands.scss
@@ -11,6 +11,7 @@ $garland-colors: var(--garland-color1), var(--garland-color2), var(--garland-col
   position: absolute;
   width: 500px;
   height: 715px;
+  pointer-events: none;
 }
 
 .garland {
@@ -20,6 +21,7 @@ $garland-colors: var(--garland-color1), var(--garland-color2), var(--garland-col
   pointer-events: none;
   width: 100%;
   list-style: none;
+  pointer-events: none;
 
   @for $i from 1 to 10 {
     &:nth-child(#{$i}n) {
