feat: add clear local storage button

--- a/christmas-task/src/components/view/tree/tree.html
+++ b/christmas-task/src/components/view/tree/tree.html
@@ -20,8 +20,11 @@
       <div class="lights__item" data-control=5></div>
 
     </div>
-    <button class="tree__save">Сохранить</button>
-    <button class="tree__reset">Сбросить</button>
+    <div class="tree__btns">
+      <button class="tree__save">Сохранить</button>
+      <button class="tree__reset">Сбросить</button>
+      <button class="tree__storage">Очистить localStorage</button>
+    </div>
   </aside>
 
   <div class="tree-wrapper tree__main">
