--- a/christmas-task/src/components/view/tree/tree.scss
+++ b/christmas-task/src/components/view/tree/tree.scss
@@ -171,13 +171,19 @@
     }
   }
 }
+.tree__btns {
+  display: flex;
+  flex-wrap: wrap;
+}
 
 .tree__save,
-.tree__reset {
+.tree__reset,
+.tree__storage {
   @include glass-plate;
+  flex-grow: 1;
   padding: 5px 10px;
   margin-right: 10px;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
 }
 
 .toys-wrapper {
