--- a/christmas-task/src/components/view/tree/tree.html
+++ b/christmas-task/src/components/view/tree/tree.html
@@ -5,20 +5,17 @@
       <button class="audio-btn"></button>
     </div>
     <p class="tree__title">Выберите ёлку</p>
-    <div class="tree-type">
-    </div>
+    <div class="tree-type"></div>
     <p class="tree__title">Выберите фон</p>
-    <div class="tree-background">
-    </div>
+    <div class="tree-background"></div>
 
     <p class="tree__title">Гирлянда</p>
     <div class="lights">
-      <div class="lights__item" data-control=1></div>
-      <div class="lights__item" data-control=2></div>
-      <div class="lights__item" data-control=3></div>
-      <div class="lights__item" data-control=4></div>
-      <div class="lights__item" data-control=5></div>
-
+      <div class="lights__item" data-control="1"></div>
+      <div class="lights__item" data-control="2"></div>
+      <div class="lights__item" data-control="3"></div>
+      <div class="lights__item" data-control="4"></div>
+      <div class="lights__item" data-control="5"></div>
     </div>
     <div class="tree__btns">
       <button class="tree__save">Сохранить</button>
@@ -29,9 +26,9 @@
 
   <div class="tree-wrapper tree__main">
     <div class="garlands"></div>
-    <img class="christmas-tree" usemap="#image-map">
+    <img class="christmas-tree" usemap="#image-map" />
     <map class="drag-area" name="image-map">
-      <area target="" alt="" title="" href="" coords="244,12,42,647,438,641" shape="poly">
+      <area target="" alt="" title="" href="" coords="244,12,42,647,438,641" shape="poly" />
     </map>
   </div>
 
@@ -39,7 +36,6 @@
     <p class="tree__title">Игрушки</p>
     <div class="toys-wrapper"></div>
     <p class="tree__title">Вы нарядили</p>
-    <div class="saved-trees">
-    </div>
+    <div class="saved-trees"></div>
   </aside>
 </div>
