--- a/museum-webpack/src/css/style.css
+++ b/museum-webpack/src/css/style.css
@@ -248,7 +248,6 @@ button {
 .ripple::active,
 .ripple::visited,
 .ripple:focus {
-  /* outline: 0; */
   border: 0;
 }
 
@@ -295,7 +294,7 @@ button {
   background-image: url('../assets/svg/logo.svg');
   background-repeat: no-repeat;
 }
-.header_theme{
+.btn {
   background-color: transparent;
   border: 0;
 }
@@ -1056,7 +1055,6 @@ button {
   height: 8px;
   -webkit-appearance: none;
   background: #c4c4c4;
-  /* outline: none; */
 }
 .player__range-time::-webkit-slider-thumb {
   margin-top: -3px;
@@ -1326,7 +1324,12 @@ button {
   height: 100%;
   top: 0;
   left: 0;
-  background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 85%, #000000 100%);
+  background: linear-gradient(
+    180deg,
+    rgba(0, 0, 0, 0) 0%,
+    rgba(0, 0, 0, 0) 85%,
+    #000000 100%
+  );
 }
 .picture__inner {
   height: 3020px; /*js*/
@@ -2194,7 +2197,8 @@ button {
   width: 28px;
   margin: 0;
   -webkit-appearance: none;
-  background: #fff url('../assets/svg/form/number_arrow.svg') no-repeat center center;
+  background: #fff url('../assets/svg/form/number_arrow.svg') no-repeat center
+    center;
   border-left: 0.5px solid #a4a4a3;
   opacity: 1;
 }
