--- a/museum-webpack/src/css/style.css
+++ b/museum-webpack/src/css/style.css
@@ -8,17 +8,27 @@
   --bg-dark: #030303;
   --dark-red: #710707;
   --font-gold: #9d8665;
-  --theme-light: #fff;
-  --theme-dark: #000;
-  --theme-bg-light: #fff;
-  --theme-gold: #9d8665;
-  --theme-border: #000;
   --font1: 80px;
   --font2: 32px;
   --font3: 28px;
   --font4: 22px;
   --font5: 18px;
 }
+[data-theme='light'] {
+  --theme-light: #fff;
+  --theme-dark: #000;
+  --theme-bg-light: #fff;
+  --theme-gold: #9d8665;
+  --theme-border: #000;
+}
+[data-theme='dark'] {
+  --theme-light: #000;
+  --theme-dark: #fff;
+  --theme-bg-light: #030303;
+  --theme-gold: #fff;
+  --theme-border: #fff;
+}
+
 *,
 *:before,
 *:after {
@@ -511,12 +521,7 @@ button {
   top: 0;
   left: 0;
   background: transparent;
-  background-image: linear-gradient(
-    90deg,
-    #000000 0%,
-    rgba(0, 0, 0, 0.5) 16.19%,
-    rgba(0, 0, 0, 0) 30.73%
-  );
+  background-image: linear-gradient(90deg, #000000 0%, rgba(0, 0, 0, 0.5) 16.19%, rgba(0, 0, 0, 0) 30.73%);
 }
 .slider__wrapper {
   width: 100%;
@@ -1324,12 +1329,7 @@ button {
   height: 100%;
   top: 0;
   left: 0;
-  background: linear-gradient(
-    180deg,
-    rgba(0, 0, 0, 0) 0%,
-    rgba(0, 0, 0, 0) 85%,
-    #000000 100%
-  );
+  background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 85%, #000000 100%);
 }
 .picture__inner {
   height: 3020px; /*js*/
@@ -2197,8 +2197,7 @@ button {
   width: 28px;
   margin: 0;
   -webkit-appearance: none;
-  background: #fff url('../assets/svg/form/number_arrow.svg') no-repeat center
-    center;
+  background: #fff url('../assets/svg/form/number_arrow.svg') no-repeat center center;
   border-left: 0.5px solid #a4a4a3;
   opacity: 1;
 }
